--- a/local.settings.json.example
+++ b/local.settings.json.example
@@ -1,7 +1,7 @@
 {
   "IsEncrypted": false,
   "Values": {
-    "AzureWebJobsStorage": "",
+    "AzureWebJobsStorage": "[Storage Account Connection String Here]",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     "CosmosDBConnectionString": "[Cosmos Connection String Here]",
     "ServiceBusConnectionString": "[Service Bus Connection String Here]"
